--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -21,3 +21,20 @@
     width: 1100px;
     margin: 0px 0px 100px 0px;
 }
+
+.form__botones {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+@media (min-width: 320px) and (max-width: 479px) {
+    .form__botones {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 30px;
+    }
+}
