--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,6 +10,15 @@
     grid-area: header;
 }
 
+.header--library {
+    background-color: $color-primario;
+
+    .boton--library {
+        background-color: $color-primario;
+    }
+}
+
+
 .header--tienda {
     display: flex;
     justify-content: space-between;
@@ -19,4 +28,26 @@
     height: 100px;
     padding: 0 50px 10px 50px;
     grid-area: header;
+}
+
+.logo {
+    width: 220px;
+}
+
+@media (min-width: 320px) and (max-width: 479px) {
+    .logo {
+        width: 180px;
+}
+}
+
+@media (min-width: 480px) and (max-width: 576px) {
+    .logo {
+        width: 200px;
+}
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .logo {
+        width: 220px;
+}
 }
