--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -2,7 +2,7 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 0.3fr auto 0.5fr;
-    grid-template-rows: 0100px 1fr 1fr 1fr 1fr 100px;
+    grid-template-rows: 50px auto 1fr 1fr 1fr 100px;
     grid-template-areas:
         "header header header"
         "main main main"
@@ -33,6 +33,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    height: auto;
     background-color: $color-blanco;
     margin: 20px 0px 0px 0px;
     grid-area: nav-1;
@@ -83,7 +84,7 @@
 
 .productos-box {
     height: auto;
-    width: 300px;
+    width: 320px;
     margin: 20px 20px 20px 20px;
     padding: 25px;
     border-radius: 5px;
@@ -96,11 +97,14 @@
         text-decoration: line-through;
         font-weight: 400;
         font-size: 24px;
+    }
 
+    .partners__logo--width {
+        width: 150px;
     }
 }
 
-@media (max-width: 479px) {
+@media (min-width: 320px) and (max-width: 479px) {
     .grid-container {
         display: grid;
         grid-template-columns: auto auto;
@@ -126,12 +130,14 @@
 
     .nav-1 {
         background-color: $color-blanco;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        height: 500px;
+        width: 360px;
         flex-wrap: wrap;
         width: auto;
         grid-area: nav-1;
+        margin: 0 50px 0 50px;
     }
 
     .section-1 {
@@ -150,8 +156,8 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        width: auto;
-        height: 350px;
+        justify-content: center;
+        align-items: center;
     }
 
     .header--tienda {
@@ -162,11 +168,18 @@
         height: 150px;
         width: auto;
         grid-area: header;
+    }
+    .main {
+        margin-top: 30px;
+    }
+
+    .partners__logo--width {
+        width: 120px;
+    }
 }
 
 a {
     font-size: 14px;
-}
 }
 
 @media (min-width: 480px) and (max-width: 576px) {
@@ -246,8 +259,14 @@ a {
         align-items: center;
         grid-area: footer__tienda;
     }
-
+    .main {
+        margin-top: 50px;
+    }
+    .partners__logo--width {
+        width: 130px;
+    }
 }
+
 
 @media (min-width: 577px) and (max-width: 768px) {
     .grid-container {
@@ -304,5 +323,8 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .main {
+        margin-top: 50px;
     }
 }
