--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -113,6 +113,10 @@ input:focus {
 }
 
 @media (min-width: 320px) and (max-width: 479px) {
+    h2 {
+        font-size: 12px;
+        line-height: 26px;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 576px) {
