--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -146,10 +146,11 @@
         align-items: center;
         line-height: 46px;
         height: 100px;
-        width: 100%;
+        width: auto;
         font-size: 40px;
-        margin: 50px 0px 0px 0px;
         text-align: center;
+        font-size: 32px;
+        line-height: 34px;
     }
 
     .home__clientes--logos {
@@ -166,9 +167,9 @@
 }
 
 @media (min-width: 320px) and (max-width: 479px) {
-    .home__secciones--titulo {
-        font-size: 42px;
-        line-height: 44px;
+    .home__clientes--titulo {
+        font-size: 22px;
+        line-height: 24px;
     }
 
     .home__secciones--botones {
@@ -202,18 +203,19 @@
         padding: 20px;
         box-shadow: 0px 0px 15px #bebebe;
     }
+
 }
 
 @media (min-width: 480px) and (max-width: 576px) {
-    .home__secciones--titulo {
-        font-size: 48px;
-        line-height: 52px;
+    .home__clientes--titulo {
+        font-size: 24px;
+        line-height: 26px;
     }
 }
 
 @media (min-width: 577px) and (max-width: 768px) {
-    .home__secciones--titulo {
-        font-size: 56px;
-        line-height: 62px;
+    .home__clientes--titulo {
+        font-size: 28px;
+        line-height: 30px;
     }
 }
