--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -27,3 +27,48 @@
         margin: 25px;
     }
 }
+
+@media (min-width: 320px) and (max-width: 479px) {
+    h1 {
+        font-size: 28px;
+        line-height: 30px;
+    }
+    .nosotros_staff--nombre {
+        font-size: 24px;
+        line-height: 26px;
+    }
+    .nosotros_staff--cargo {
+        font-size: 18px;
+        line-height: 20px;
+    }
+}
+
+@media (min-width: 480px) and (max-width: 576px) {
+    h1 {
+        font-size: 30px;
+        line-height: 32px;
+    }
+    .nosotros_staff--nombre {
+        font-size: 26px;
+        line-height: 28px;
+    }
+    .nosotros_staff--cargo {
+        font-size: 20px;
+        line-height: 22px;
+    }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+    h1 {
+        font-size: 32px;
+        line-height: 34px;
+    }
+    .nosotros_staff--nombre {
+        font-size: 28px;
+        line-height: 30px;
+    }
+    .nosotros_staff--cargo {
+        font-size: 22px;
+        line-height: 24px;
+    }
+}
