--- a/scss/_novedades.scss
+++ b/scss/_novedades.scss
@@ -78,7 +78,7 @@
         display: flex;
         flex-direction: column;
         width: 320px;
-        margin: 0;
+        margin: 20px;
         padding: 0;
         border-bottom: 3px dotted #323e48;
     }
